# DPA

./: .gitignore  README.md
assignments/A01/: README.md
assignments/A02/: .gitignore  README.md  bug.c  inject.js  inject_big.js  prog.c  run.py  sol.js
assignments/A03/: .gitignore  README.md  heap.py  heap_sol.py  prog.c  starter.py  taint.py
assignments/A04/: README.md
assignments/A05/: README.md
labs/LAB01/: Dockerfile_base  NOTES.txt  README.md  allocation_soln.txt  bomb.c  cmds.txt  defuse.txt  foo.db  in.sql
labs/LAB02/: .gitignore  README.md  sol.md
labs/LAB02/mytracer.sol/: CMakeLists.txt  Makefile  mytracer.c
labs/LAB03/: README.md
labs/LAB04/: .gitignore  bugsol.txt
labs/LAB04/lucky12code/passes/: CMakeLists.txt  Makefile  README.txt
labs/LAB04/lucky12code/passes/hello/: Makefile  hello.cpp
labs/LAB04/lucky12code/passes/helloputs/: CMakeLists.txt  helloputs.cpp
labs/LAB04/lucky12code/passes/luckysan/: CMakeLists.txt  luckysan.cpp
labs/LAB05/: README.md
labs/LAB06/: README.md  analyze.py  asidstory.py  howvec.c  mylogger.py  qemu.md  record.py
labs/LAB07/: README.md  leaky.c  slow.c
labs/LAB08/: .gitignore  Makefile  README.md  crackme.c  harder.c  soln.txt
labs/LAB09/: README.md  notes.txt
labs/LAB10/: README.md  jit_graph.py  min.py  min2.py  rand.py  small.py  soln.py
lectures/L01/: Makefile  overview.md
lectures/L02/: dbi.md
lectures/L03/: frida.md
lectures/L04/: .gitignore  Makefile  bad.c  sanitize.md
lectures/L05/: panda.md
lectures/L06/: Makefile  panda2.md
lectures/L07/: Makefile  bug.c  heapbug.c  (+2 more)
(+33 files in other folders)
